--- a/package.json
+++ b/package.json
@@ -9,18 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
     "@rainbow-me/rainbowkit": "^1.3.5",
+    "@rainbow-me/rainbowkit-siwe-next-auth": "^0.3.4",
+    "ethers": "^5.7.2",
+    "framer-motion": "^11.0.3",
     "next": "^14.0.4",
+    "next-auth": "^4.24.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
+    "siwe": "^2.1.4",
     "viem": "~1.21.4",
     "wagmi": "~1.4.13"
   },
   "devDependencies": {
     "@types/node": "^18.19.3",
     "@types/react": "^18.2.43",
+    "autoprefixer": "^10.4.17",
     "eslint": "^8.15.0",
     "eslint-config-next": "^14.0.4",
+    "postcss": "^8.4.34",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.0.4"
   }
 }
