--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@rainbow-me/rainbowkit": "^1.3.5",
     "@rainbow-me/rainbowkit-siwe-next-auth": "^0.3.4",
     "ethers": "^5.7.2",
+    "formik": "^2.4.5",
     "framer-motion": "^11.0.3",
     "next": "^14.0.4",
     "next-auth": "^4.24.5",
