--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ethers": "^5.7.2",
     "formik": "^2.4.5",
     "framer-motion": "^11.0.3",
+    "mongodb": "^6.3.0",
     "next": "^14.0.4",
     "next-auth": "^4.24.5",
     "react": "^18.2.0",
