--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongodb": "^6.3.0",
     "next": "^14.0.4",
     "next-auth": "^4.24.5",
+    "prettier": "^3.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
