--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@livepeer/react": "^4.1.0",
     "@rainbow-me/rainbowkit": "^1.3.5",
     "@rainbow-me/rainbowkit-siwe-next-auth": "^0.3.4",
     "ethers": "^5.7.2",
@@ -23,6 +24,7 @@
     "prettier": "^3.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-icons": "^5.0.1",
     "siwe": "^2.1.4",
     "viem": "~1.21.4",
