--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "ethers": "^5.7.2",
     "formik": "^2.4.5",
     "framer-motion": "^11.0.3",
+    "livepeer": "^3.0.2",
+    "lucide-react": "^0.330.0",
     "mongodb": "^6.3.0",
     "next": "^14.0.4",
     "next-auth": "^4.24.5",
@@ -27,6 +29,8 @@
     "react-dropzone": "^14.2.3",
     "react-icons": "^5.0.1",
     "siwe": "^2.1.4",
+    "sonner": "^1.4.0",
+    "tailwind-merge": "^2.2.1",
     "viem": "~1.21.4",
     "wagmi": "~1.4.13"
   },
