--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
-    "@livepeer/react": "^4.1.0",
+    "@livepeer/react": "^4.1.2",
     "@rainbow-me/rainbowkit": "^1.3.5",
     "@rainbow-me/rainbowkit-siwe-next-auth": "^0.3.4",
     "ethers": "^5.7.2",
     "formik": "^2.4.5",
     "framer-motion": "^11.0.3",
     "livepeer": "^3.0.2",
+    "lucide-react": "^0.330.0",
     "mongodb": "^6.3.0",
     "next": "^14.0.4",
     "next-auth": "^4.24.5",
@@ -28,6 +29,7 @@
     "react-dropzone": "^14.2.3",
     "react-icons": "^5.0.1",
     "siwe": "^2.1.4",
+    "sonner": "^1.4.0",
     "tailwind-merge": "^2.2.1",
     "viem": "~1.21.4",
     "wagmi": "~1.4.13"
