--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@livepeer/react": "^4.1.2",
     "@rainbow-me/rainbowkit": "^1.3.5",
     "@rainbow-me/rainbowkit-siwe-next-auth": "^0.3.4",
+    "@react-three/fiber": "^8.15.16",
     "ethers": "^5.7.2",
     "formik": "^2.4.5",
     "framer-motion": "^11.0.3",
@@ -31,6 +32,7 @@
     "siwe": "^2.1.4",
     "sonner": "^1.4.0",
     "tailwind-merge": "^2.2.1",
+    "three": "^0.161.0",
     "viem": "~1.21.4",
     "wagmi": "~1.4.13"
   },
